# Sadovnik-flask

./: README.md  __main__.py  app.py  main.py  pyproject.toml  render.yaml  requirements.txt
sadovnik/: __init__.py  __main__.py
static/: styles.css
templates/: about.html  base.html  index.html  services.html
