[project]
name = "sadovnik"
version = "0.1.0"
description = ""
authors = [
    {name = "vitallcore",email = "vitaslipknot@gmail.com"}
]
package-mode = false

readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "blinker (>=1.9.0,<2.0.0)",
    "click (>=8.2.1,<9.0.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "flask (>=3.1.1,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "markupsafe (>=3.0.2,<4.0.0)",
    "mccabe (>=0.7.0,<0.8.0)",
    "packaging (>=25.0,<26.0)",
    "pycodestyle (>=2.13.0,<3.0.0)",
    "pyflakes (>=3.3.2,<4.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
